fix contrast and uio icon

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -41,7 +41,7 @@ a.active.sidebar-link
   font-size: 0.9rem
   padding: 1rem
   a 
-    color: #4e6e8e
+    color: #2d5d82
   .align-right
     text-align: right
   .align-left
